--- a/src/index.html
+++ b/src/index.html
@@ -2,122 +2,98 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Evolution7 Test</title>
-  </head>
-  <body>
+    <meta name="description" content="Barcelona's premier racing club. Exclusive members facilities and full suite of services for vehicles.">
+    <link rel="shortcut icon" type="image/png" href="../src/images/favicon.png"/>
+    <title>360 The Automotive Concept Barcelona</title>
+  <link href="main.css" rel="stylesheet"></head>
+  <body class="page-home">
     <header>
-      <div class="logo">
-        <h2 class="logo__text">ROSA</h2>
+      <div class="logo" style="display:none">
+        <img src="../src/images/logo.png" alt="" class="logo__image">
       </div>
-      <nav class="nav">
+      <div class="nav">
         <div class="burger-icon" onclick="window.toggleMobileMenu()">
           <div class="burger-icon__bar"></div>
         </div>
         <div class="menu">
-          <a class="menu__item menu__item--active" href="">Welcome</a>
-          <a class="menu__item" href="">Menu</a>
-          <a class="menu__item" href="">Reservations</a>
-          <a class="menu__item" href="">News</a>
-          <a class="menu__item" href="">Contact</a>
+          <a class="link-primary menu__link" href="owners.html">Owners</a>
+          <a class="link-primary menu__link" href="racing.html">Racing</a>
+          <a class="link-primary menu__link" href="collection.html">360 Collection</a>
+          <div class="swap-txt-hover" style="margin-top: 1.5rem; height: 30px">
+            <a class="link-primary menu__link swap-txt-hover__item" href="">Members Section</a>
+            <a class="link-primary menu__link swap-txt-hover__item">Coming soon</a>
+          </div>
         </div>
-      </nav>
+      </div>
     </header>
     <main>
-      <section class="hero carousel">
-          <button class="carousel__carousel-control" onclick="window.carouselForward()">></button>
-          <button class="carousel__carousel-control" onclick="window.carouselBack()"><</button>
-          <div class="carousel__carousel-frame">
-            <div class="carousel__carousel-item">
-              <h2 class="hero__pretext">Welcome</h2>
-              <h1 class="hero__logo-text">THE ROSA</h1>
-              <h2 class="hero__tagline">READY TO BE OPENED</h2>
-            </div>
-            <div class="carousel__carousel-item">
-              <h2 class="hero__pretext">Welcome</h2>
-              <h1 class="hero__logo-text">THE ROSA</h1>
-              <h2 class="hero__tagline">READY TO BE OPENED</h2>
-            </div>
-            <div class="carousel__carousel-item">
-              <h2 class="hero__pretext">Welcome</h2>
-              <h1 class="hero__logo-text">THE ROSA</h1>
-              <h2 class="hero__tagline">READY TO BE OPENED</h2>
+      <section>
+        <div class="hero">
+          <div class="hero__content" >
+            <img src="../src/images/logo.png" alt="" class="hero__image">
+            <div class="hero__links">
+              <a class="link-primary" href="owners.html">Owners</a>
+              <a class="link-primary" href="racing.html">Racing</a>
+              <a class="link-primary" href="collection.html">360 Collection</a>
             </div>
           </div>
-      </section>
-      <section class="feature-2-col">
-        <div class="feature-2-col__text-block">
-          <h2 class="feature-2-col__pretext">Discover</h2>
-          <h2 class="feature-2-col__headline">OUR STORY</h2>
-          <p class="feature-2-col__body">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit delectus velit voluptatum maxime adipisci, porro consectetur, alias molestias vel quas, quae illum mollitia odio distinctio ipsam aliquid numquam, officia ut.
-          </p>
-          <a href="" class="feature-2-col__link">About us</a>
         </div>
-        <div class="feature-2-col__image-container">
-          <div class="feature-2-col__image-frame">
-            <img inline class="feature-2-col__image" src="../src/images/food1.jpg">
+      </section>
+      <section>
+        <div class="b-1-col">
+          <div class="b-1-col__content">
+            <h2 class="b-1-col__headline">Our Mission at 360</h2>
+            <h2 class="b-1-col__sub-headline sub-headline">Bringing excellence in racing to those who love it most</h2>
+            <p class="b-1-col__body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum ducimus totam sint tempore sunt placeat ad maxime. Dolor voluptas quia harum consequatur, esse iusto illo quod, reiciendis, natus ut laudantium.</p>
           </div>
         </div>
       </section>
-      <section class="feature-1-col">
-        <h2 class="feature-1-col__pretext">Tasteful</h2>
-        <h2 class="feature-1-col__title">RECIPIES</h2>
-      </section>
-      <section class="feature-2-col">
-        <div class="feature-2-col__image-container">
-          <div class="feature-2-col__image-frame">
-            <img inline class="feature-2-col__image-band" src="../src/images/food2-2.jpg">
-            <img inline class="feature-2-col__image-band" src="../src/images/food2-2.jpg">
-          </div>
-        </div>
-        <div class="feature-2-col__text-block">
-          <h2 class="feature-2-col__pretext">Discover</h2>
-          <h2 class="feature-2-col__headline">MENU</h2>
-          <p class="feature-2-col__body">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit delectus velit voluptatum maxime adipisci, porro consectetur, alias molestias vel quas, quae illum mollitia odio distinctio ipsam aliquid numquam, officia ut.
-          </p>
-          <a href="" class="feature-2-col__link">View the full menu</a>
-        </div>
-      </section>
-      <section class="feature-1-col">
-        <h2 class="feature-1-col__pretext">The perfect</h2>
-        <h2 class="feature-1-col__title">BLEND</h2>
-      </section>
-      <section class="feature-2-col">
-        <div class="feature-2-col__text-block">
-          <h2 class="feature-2-col__pretext">Culinary</h2>
-          <h2 class="feature-2-col__headline">DELIGHT</h2>
-          <p class="feature-2-col__body">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit delectus velit voluptatum maxime adipisci, porro consectetur, alias molestias vel quas, quae illum mollitia odio distinctio ipsam aliquid numquam, officia ut.
-          </p>
-          <a href="" class="feature-2-col__link">Make a reservation</a>
-        </div>
-        <div class="feature-2-col__image-container">
-          <div class="feature-2-col__image-frame">
-            <img inline class="feature-2-col__image-grid" src="../src/images/food3-2.jpg">
-            <img inline class="feature-2-col__image-grid" src="../src/images/food3-2.jpg">
-            <img inline class="feature-2-col__image-grid" src="../src/images/food3-2.jpg">
-            <img inline class="feature-2-col__image-grid" src="../src/images/food3-2.jpg">
+      <section>
+        <div class="b-1-col b-1-col--img-bg" style="background-image: url('images/img-14-3.jpg')">
+          <div class="b-1-col__content">
+            <h2 class="b-1-col__headline">Our Values</h2>
+            <h2 class="b-1-col__sub-headline sub-headline">Bringing excellence in racing to those who love it most</h2>
+            <p class="b-1-col__body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum ducimus totam sint tempore sunt placeat ad maxime. Dolor voluptas quia harum consequatur, esse iusto illo quod, reiciendis, natus ut laudantium.</p>
           </div>
         </div>
       </section>
+
+      <section>
+        <div class="b-3-img">
+          <h2 class="b-3-img__headline section-headline">Our partners</h2>
+          <div class="b-3-img__blocks">
+            <div class="b-3-img__block">
+              <div class="b-3-img__img" style="background-image: url('images/img-14-3.jpg')"></div>
+              <h3 class="b-3-img__img-headline"> Exceptional service</h3>
+            </div>
+            <div class="b-3-img__block">
+              <div class="b-3-img__img" style="background-image: url('images/img-14-3.jpg')"></div>
+              <h3 class="b-3-img__img-headline"> Exceptional service</h3>
+            </div>
+            <div class="b-3-img__block">
+              <div class="b-3-img__img" style="background-image: url('images/img-14-3.jpg')"></div>
+              <h3 class="b-3-img__img-headline"> Exceptional service</h3>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <section class="contact-info-container">
         <div class="contact-info">
-          <h3 class="contact-info__title">Locations</h3>
-          <h4 class="contact-info__text-block">123 Fake street </br> Brooklyn NYC</h4>
-          <h4 class="contact-info__text-block">123 Fake street </br> Brooklyn NYC</h4>
+          <h3 class="contact-info__title">Contact</h3>
+          <a href="mailto:someone@example.com?Subject=Website%20enquiry" class="link-primary contact-info__text-block">123@email.com </br></a>
         </div>
         <div class="contact-info">
-          <h3 class="contact-info__title">Hours</h3>
-          <h4 class="contact-info__text-block">Mon - Fri </br>8.00 - 18.00</h4>
-          <h4 class="contact-info__text-block">Mon - Fri </br>8.00 - 18.00</h4>
-          <h4 class="contact-info__text-block">Mon - Fri </br>8.00 - 18.00</h4>
+          <div class="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d23880.376252300328!2d2.2483943705742417!3d41.5682267!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x150ed08bef7e2b48!2sBarcelona-Catalunya+Circuit!5e0!3m2!1sen!2ses!4v1522663822531" width="400" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
+          </div>
         </div>
       </section>
     </main>
     <footer>
-        <p class="footer-text">Copyright our Company</p>
+        <p class="footer-text">Copyright 360 Racing Barcelona</p>
         <p class="footer-text">All rights reserved</p>
     </footer>
+    <script src="bundle.js"></script>
   </body>
 </html>
